crates/general/fixtures/invalid/string_number_lexical.zt
-- Expected: parse-error (≥1 diagnostic + lossless round-trip)
-- Spec: conventions §3.2/§3.3 — JSON-style number and string grammar.
-- Invalid numbers: leading zeros (`007`), lone `.` suffix (`3.`, `1.`), leading dot (`.5`),
-- incomplete exponent (`1e`, `1e+`, `1e-`), double dot (`1.2.3`), hex (`0x…`), binary (`0b…`),
-- underscores (`1_000`). Invalid strings: bad escapes (`"\q"`), unterminated string literal.
-- (`--5` is a valid line comment and is excluded from this fixture.)

007

007.5

00

0123456789

3.

.5

.25

1e

1e+

1e-

1.2.3

0x1F

0xDEAD

0b1010

1_000

1_000_000

3.14_15

1.

2.

3.14.

"\q"

"\p"

"\a"

"\z"

"\uXXXX"

"\u{GGGG}"

"unterminated
